[gd_scene load_steps=8 format=4 uid="uid://bjk07xthxxsvm"]

[ext_resource type="PackedScene" uid="uid://dosu6exalldqs" path="res://scenes/level.tscn" id="1_ou6xt"]
[ext_resource type="Script" uid="uid://bak3o0uoqqt8b" path="res://scenes/inside.gd" id="2_01b43"]
[ext_resource type="TileSet" uid="uid://bqkp2uv5uv27m" path="res://scenes/outside.tres" id="3_hqivc"]
[ext_resource type="Texture2D" uid="uid://b1ge84nx1ehrb" path="res://art/objects/bush.png" id="4_2b3hl"]
[ext_resource type="Texture2D" uid="uid://q4y6k0hpv33" path="res://art/objects/bush2.png" id="5_77v4g"]

[sub_resource type="CanvasTexture" id="CanvasTexture_2b3hl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2b3hl"]
size = Vector2(63, 172.5)

[node name="Inside" instance=ExtResource("1_ou6xt")]
script = ExtResource("2_01b43")

[node name="Ground" type="Node2D" parent="." index="0"]
position = Vector2(-762, 231)

[node name="TileMapLayer4" type="TileMapLayer" parent="Ground" index="0"]
tile_map_data = PackedByteArray("AAAIAPv/BwABAAAAAAAIAPr/BwAEAAEAAAAIAPn/BwAEAAEAAAAIAPj/BwAEAAEAAAAIAPf/BwABAAYAAAAJAPf/BwACAAYAAAAKAPf/BwACAAYAAAALAPf/BwAAAAYAAAAIAPz/BwAEAAAAAAAIAP3/BwAEAAAAAAAIAP7/BwAEAAAAAAAIAP//BwAEAAAAAAAIAAAABwAEAAAAAAAIAAEABwAEAAAAAAAIAAIABwAEAAAAAAAJAAIABwAFAAEAAAAKAAIABwAFAAEAAAALAAIABwAFAAEAAAALAAEABwAFAAEAAAALAP//BwAFAAEAAAALAAAABwAFAAEAAAAKAP7/BwAFAAEAAAALAPj/BwAGAAAAAAALAPr/BwAFAAAAAAAKAPr/BwAFAAAAAAAJAPr/BwAFAAAAAAALAPv/BwAFAAEAAAAMAP7/BwAFAAEAAAANAP7/BwAFAAEAAAAQAAIABwAFAAEAAAAMAAIABwAFAAEAAAAOAAIABwAFAAEAAAANAAIABwAFAAEAAAAPAAIABwAFAAEAAAATAPv/BwADAAAAAAATAPz/BwAGAAEAAAATAP3/BwAGAAEAAAATAP7/BwAFAAEAAAASAP7/BwAFAAEAAAARAP7/BwAFAAEAAAAOAP7/BwAFAAEAAAARAAIABwAFAAEAAAASAAIABwAFAAEAAAATAAIABwAFAAEAAAAVAAIABwAFAAEAAAAUAAIABwAFAAEAAAAWAAIABwAFAAEAAAAZAP//BwAGAAEAAAAZAAAABwAGAAEAAAAZAAEABwAGAAEAAAAZAAIABwAGAAEAAAAYAAIABwAFAAEAAAAXAAIABwAFAAEAAAAJAPj/BwAFAAAAAAAKAPj/BwAFAAAAAAANAPv/BwAFAAEAAAAOAPv/BwACAAAAAAAPAPv/BwACAAAAAAAQAPv/BwACAAAAAAARAPv/BwACAAAAAAASAPv/BwACAAAAAAAYAP//BwAFAAEAAAAXAP//BwAFAAEAAAAWAP//BwAFAAEAAAAVAP//BwAFAAEAAAAUAP//BwAFAAEAAAATAP//BwAFAAEAAAASAP//BwAFAAEAAAARAP//BwAFAAEAAAAOAP//BwAFAAEAAAANAP//BwAFAAEAAAAMAP//BwAFAAEAAAAJAPn/BwAFAAAAAAAKAPn/BwAFAAAAAAALAPz/BwAFAAEAAAAMAPz/BwAFAAEAAAAMAP3/BwAFAAEAAAANAP3/BwAFAAEAAAAOAP3/BwAFAAEAAAAJAPv/BwACAAAAAAAJAPz/BwAFAAEAAAAJAP3/BwAFAAEAAAAKAPv/BwACAAAAAAAKAPz/BwAFAAEAAAAKAP3/BwAFAAEAAAALAP3/BwAFAAEAAAAMAPv/BwAFAAEAAAANAPz/BwAFAAEAAAAOAPz/BwAFAAEAAAAPAPz/BwAFAAEAAAAPAP3/BwAFAAEAAAAQAPz/BwAFAAEAAAAQAP3/BwAFAAEAAAARAPz/BwAFAAEAAAARAP3/BwAFAAEAAAASAPz/BwAFAAEAAAASAP3/BwAFAAEAAAAJAP//BwAFAAEAAAAKAP//BwAFAAEAAAAPAP7/BwAFAAEAAAAQAP7/BwAFAAEAAAAJAAAABwAFAAEAAAAJAAEABwAFAAEAAAAKAAAABwAFAAEAAAAKAAEABwAFAAEAAAAMAAAABwAFAAEAAAAMAAEABwAFAAEAAAANAAAABwAFAAEAAAANAAEABwAFAAEAAAAOAAAABwAFAAEAAAAOAAEABwAFAAEAAAAPAAAABwAFAAEAAAAPAAEABwAFAAEAAAAQAAAABwAFAAEAAAAQAAEABwAFAAEAAAARAAAABwAFAAEAAAARAAEABwAFAAEAAAASAAAABwAFAAEAAAASAAEABwAFAAEAAAATAAAABwAFAAEAAAATAAEABwAFAAEAAAAUAAAABwAFAAEAAAAUAAEABwAFAAEAAAAVAAAABwAFAAEAAAAVAAEABwAFAAEAAAAWAAAABwAFAAEAAAAWAAEABwAFAAEAAAAXAAAABwAFAAEAAAAXAAEABwAFAAEAAAAYAAAABwAFAAEAAAAYAAEABwAFAAEAAAAPAP//BwAFAAEAAAAQAP//BwAFAAEAAAALAP7/BwAFAAEAAAAJAP7/BwAFAAEAAAA=")
tile_set = ExtResource("3_hqivc")

[node name="TileMapLayer3" type="TileMapLayer" parent="Ground" index="1"]
tile_map_data = PackedByteArray("AAAIAPv/BwAHAAAAAAAIAPr/BwAEAAEAAAAIAPn/BwAEAAEAAAAIAPj/BwAEAAEAAAAIAPf/BwABAAYAAAAJAPf/BwACAAYAAAAKAPf/BwACAAYAAAALAPf/BwAAAAYAAAAIAPz/BwAEAAAAAAAIAP3/BwAEAAAAAAAIAP7/BwABAAEAAAAIAP//BwAHAAAAAAAIAAAABwAEAAAAAAAIAAEABwAEAAAAAAAIAAIABwAHAAEAAAAJAAIABwAIAAEAAAAKAAIABwAIAAEAAAALAAIABwAIAAEAAAALAAEABwAFAAEAAAALAP//BwAAAAEAAAALAAAABwAFAAEAAAAKAP7/BwACAAEAAAAJAP7/BwACAAEAAAALAPj/BwAGAAAAAAALAPn/BwAGAAAAAAALAPr/BwAFAAAAAAAKAPr/BwAFAAAAAAAJAPr/BwAFAAAAAAALAPv/BwAIAAAAAAAMAP7/BwABAAEAAAANAP7/BwACAAEAAAAQAAIABwACAAEAAAAMAAIABwABAAEAAAAOAAIABwACAAEAAAANAAIABwACAAEAAAAPAAIABwACAAEAAAATAPv/BwAAAAEAAAATAPz/BwAGAAEAAAATAP3/BwAGAAEAAAATAP7/BwACAAEAAAASAP7/BwACAAEAAAARAP7/BwACAAEAAAAOAP7/BwACAAEAAAARAAIABwACAAEAAAASAAIABwACAAEAAAATAAIABwACAAEAAAAVAAIABwACAAEAAAAUAAIABwACAAEAAAAWAAIABwACAAEAAAAZAP//BwAAAAEAAAAZAAAABwAGAAEAAAAZAAEABwAGAAEAAAAZAAIABwADAAEAAAAYAAIABwACAAEAAAAXAAIABwACAAEAAAAJAPj/BwAFAAAAAAAKAPj/BwAFAAAAAAANAPv/BwAIAAAAAAAOAPv/BwAIAAAAAAAPAPv/BwAIAAAAAAAQAPv/BwAIAAAAAAARAPv/BwAIAAAAAAASAPv/BwAIAAAAAAAYAP//BwAIAAAAAAAXAP//BwAIAAAAAAAWAP//BwAIAAAAAAAVAP//BwAIAAAAAAAUAP//BwAIAAAAAAATAP//BwAIAAAAAAASAP//BwAIAAAAAAARAP//BwAIAAAAAAAOAP//BwAIAAAAAAANAP//BwAIAAAAAAAMAP//BwAHAAAAAAAJAPn/BwAFAAAAAAAKAPn/BwAFAAAAAAALAPz/BwAFAAEAAAAMAPz/BwAFAAEAAAAMAP3/BwAFAAEAAAANAP3/BwAFAAEAAAAOAP3/BwAFAAEAAAAJAPv/BwAIAAAAAAAJAPz/BwAFAAEAAAAJAP3/BwAFAAEAAAAKAPv/BwAIAAAAAAAKAPz/BwAFAAEAAAAKAP3/BwAFAAEAAAALAP3/BwAFAAEAAAAMAPr/BwACAAEAAAAMAPv/BwAIAAAAAAANAPz/BwAFAAEAAAAOAPz/BwAFAAEAAAAPAPz/BwAFAAEAAAAPAP3/BwAFAAEAAAAQAPz/BwAFAAEAAAAQAP3/BwAFAAEAAAARAPz/BwAFAAEAAAARAP3/BwAFAAEAAAASAPz/BwAFAAEAAAASAP3/BwAFAAEAAAAJAP//BwAIAAAAAAAKAP//BwAIAAAAAAAPAP7/BwACAAEAAAAQAP7/BwACAAEAAAAJAAAABwAFAAEAAAAJAAEABwAFAAEAAAAKAAAABwAFAAEAAAAKAAEABwAFAAEAAAAMAAAABwAFAAEAAAAMAAEABwAFAAEAAAANAAAABwAFAAEAAAANAAEABwAFAAEAAAAOAAAABwAFAAEAAAAOAAEABwAFAAEAAAAPAAAABwAFAAEAAAAPAAEABwAFAAEAAAAQAAAABwAFAAEAAAAQAAEABwAFAAEAAAARAAAABwAFAAEAAAARAAEABwAFAAEAAAASAAAABwAFAAEAAAASAAEABwAFAAEAAAATAAAABwAFAAEAAAATAAEABwAFAAEAAAAUAAAABwAFAAEAAAAUAAEABwAFAAEAAAAVAAAABwAFAAEAAAAVAAEABwAFAAEAAAAWAAAABwAFAAEAAAAWAAEABwAFAAEAAAAXAAAABwAFAAEAAAAXAAEABwAFAAEAAAAYAAAABwAFAAEAAAAYAAEABwAFAAEAAAAPAP//BwAIAAAAAAAQAP//BwAIAAAAAAALAP7/BwADAAEAAAA=")
tile_set = ExtResource("3_hqivc")

[node name="Bush" type="Sprite2D" parent="Ground" index="2"]
modulate = Color(0.67, 0.67, 0.67, 0.937255)
position = Vector2(788, 271)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_2b3hl")

[node name="Bush4" type="Sprite2D" parent="Ground" index="3"]
modulate = Color(0.67, 0.67, 0.67, 0.937255)
position = Vector2(1922, -205)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_2b3hl")

[node name="Bush3" type="Sprite2D" parent="Ground" index="4"]
modulate = Color(0.67, 0.67, 0.67, 0.937255)
position = Vector2(1920, -176)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_2b3hl")

[node name="Bush2" type="Sprite2D" parent="Ground" index="5"]
modulate = Color(0.67, 0.67, 0.67, 1)
position = Vector2(2480, 275)
scale = Vector2(0.53, 0.53)
texture = ExtResource("5_77v4g")

[node name="TileMapLayer" type="TileMapLayer" parent="Ground" index="6"]
tile_map_data = PackedByteArray("AAAIAPv/BwADAAYAAAAIAPr/BwABAAYAAAAIAPn/BwACAAIAAAAIAPj/BwADAAYAAAAIAPf/BwABAAYAAAAJAPf/BwACAAYAAAAKAPf/BwACAAYAAAALAPf/BwAAAAYAAAAIAP7/BwABAAYAAAAIAP//BwADAAYAAAAIAAAABwAEAAQAAAAIAAEABwAEAAQAAAAKAAIABwACAAYAAAALAAIABwACAAYAAAALAAEABwADAAUAAAALAP7/BwACAAYAAAALAP//BwAEAAYAAAALAAAABwAIAAIAAAAKAP7/BwAFAAMAAAAJAP7/BwAEAAMAAAALAPj/BwAFAAYAAAALAPn/BwAIAAYAAAALAPr/BwAAAAYAAAALAPv/BwAFAAYAAAAMAP7/BwACAAYAAAANAP7/BwACAAYAAAAQAAIABwACAAYAAAAMAAIABwACAAYAAAAOAAIABwACAAYAAAANAAIABwACAAYAAAAPAAIABwACAAYAAAAOAPr/BwACAAYAAAAPAPr/BwACAAYAAAAQAPr/BwACAAYAAAARAPr/BwACAAYAAAASAPr/BwACAAYAAAANAPr/BwACAAYAAAATAPr/BwAAAAYAAAATAPv/BwAFAAYAAAATAPz/BwADAAUAAAATAP3/BwADAAUAAAATAP7/BwACAAYAAAASAP7/BwACAAYAAAARAP7/BwACAAYAAAAOAP7/BwACAAYAAAARAAIABwACAAYAAAASAAIABwACAAYAAAATAAIABwACAAYAAAAVAAIABwACAAYAAAAUAAIABwACAAYAAAAWAAIABwACAAYAAAAUAP7/BwACAAYAAAAVAP7/BwACAAYAAAAWAP7/BwACAAYAAAAXAP7/BwACAAYAAAAYAP7/BwACAAYAAAAZAP7/BwAAAAYAAAAZAP//BwAFAAYAAAAZAAAABwADAAUAAAAZAAEABwADAAUAAAAZAAIABwAAAAYAAAAYAAIABwACAAYAAAAXAAIABwACAAYAAAAJAPj/BwAEAAYAAAAKAPj/BwAEAAYAAAANAPv/BwAEAAYAAAAOAPv/BwAEAAYAAAAPAPv/BwAEAAYAAAAQAPv/BwAEAAYAAAARAPv/BwAEAAYAAAASAPv/BwAEAAYAAAAYAP//BwAEAAYAAAAXAP//BwAEAAYAAAAWAP//BwAEAAYAAAAVAP//BwAEAAYAAAAUAP//BwAEAAYAAAATAP//BwAEAAYAAAASAP//BwAEAAYAAAARAP//BwAEAAYAAAAOAP//BwAEAAYAAAANAP//BwAEAAYAAAAMAP//BwAEAAYAAAAIAAMABwABAAYAAAAJAAMABwACAAYAAAAKAAMABwACAAYAAAALAAMABwACAAYAAAAMAAMABwACAAYAAAANAAMABwACAAYAAAAOAAMABwACAAYAAAAPAAMABwACAAYAAAAQAAMABwACAAYAAAARAAMABwACAAYAAAASAAMABwACAAYAAAATAAMABwACAAYAAAAUAAMABwACAAYAAAAXAAMABwACAAYAAAAYAAMABwACAAYAAAAWAAMABwACAAYAAAAVAAMABwACAAYAAAAZAAMABwAAAAYAAAAJAAIABwACAAYAAAAIAAIABwABAAYAAAAKAPv/BwAEAAYAAAAKAPr/BwACAAYAAAA=")
tile_set = ExtResource("3_hqivc")

[node name="TileMapLayer2" type="TileMapLayer" parent="Ground" index="7"]
tile_map_data = PackedByteArray("AAAIAPv/BwACAAIAAAAIAPr/BwAHAAMAAAAIAPn/BwACAAIAAAAIAPj/BwACAAIAAAAIAPf/BwAFAAQAAAAJAPf/BwAHAAUAAAAKAPf/BwAHAAUAAAALAPf/BwAGAAQAAAAIAP7/BwAHAAQAAAAIAP//BwAEAAQAAAAIAAAABwAEAAQAAAAIAAEABwAEAAQAAAAIAAIABwABAAIAAAAJAAIABwAGAAUAAAAKAAIABwAGAAUAAAALAAIABwAEAAUAAAALAAEABwADAAUAAAALAP7/BwACAAUAAAALAP//BwADAAUAAAALAAAABwAIAAIAAAAKAP7/BwAFAAMAAAAJAP7/BwAEAAMAAAALAPj/BwAIAAYAAAALAPn/BwAIAAYAAAALAPr/BwAAAAQAAAAKAPr/BwAIAAUAAAALAPv/BwAIAAYAAAAMAP7/BwAFAAUAAAANAP7/BwAFAAUAAAAQAAIABwAGAAUAAAAMAAIABwAGAAUAAAAOAAIABwAGAAUAAAANAAIABwAGAAUAAAAPAAIABwAGAAUAAAAOAPr/BwAFAAUAAAAPAPr/BwAFAAUAAAAQAPr/BwAFAAUAAAARAPr/BwAFAAUAAAASAPr/BwAFAAUAAAATAPr/BwACAAUAAAATAPv/BwADAAUAAAATAPz/BwADAAUAAAATAP3/BwADAAUAAAATAP7/BwAAAAcAAAASAP7/BwAFAAUAAAARAP7/BwAFAAUAAAAOAP7/BwAFAAUAAAARAAIABwAGAAUAAAASAAIABwAGAAUAAAATAAIABwAGAAUAAAAVAAIABwAGAAUAAAAUAAIABwAGAAUAAAAWAAIABwAGAAUAAAAUAP7/BwAFAAUAAAAVAP7/BwAFAAUAAAAWAP7/BwAFAAUAAAAXAP7/BwAFAAUAAAAYAP7/BwAFAAUAAAAZAP7/BwACAAUAAAAZAP//BwADAAUAAAAZAAAABwADAAUAAAAZAAEABwADAAUAAAAZAAIABwAEAAUAAAAYAAIABwAGAAUAAAAXAAIABwAGAAUAAAALAPz/BwAIAAQAAAAMAPr/BwAFAAMAAAAQAP7/BwAFAAMAAAAPAP7/BwAEAAMAAAANAPr/BwAFAAUAAAAZAAMABwAFAAYAAAAYAAMABwAEAAYAAAAXAAMABwAEAAYAAAAWAAMABwAEAAYAAAAVAAMABwAEAAYAAAAUAAMABwAEAAYAAAATAAMABwAEAAYAAAASAAMABwAEAAYAAAARAAMABwAEAAYAAAAQAAMABwAEAAYAAAAPAAMABwAEAAYAAAAOAAMABwAEAAYAAAANAAMABwAEAAYAAAAMAAMABwAEAAYAAAALAAMABwAEAAYAAAAKAAMABwAEAAYAAAAJAAMABwAEAAYAAAAIAAMABwADAAYAAAAIAPz/BwAAAAMAAAAIAP3/BwABAAMAAAA=")
tile_set = ExtResource("3_hqivc")

[node name="Gallery" type="Control" parent="." index="1"]
custom_minimum_size = Vector2(3000, 1500)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1500.0
offset_top = -750.0
offset_right = 2000.0
offset_bottom = 750.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxContainerA" type="BoxContainer" parent="Gallery" index="0"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.505
anchor_right = 1.0
anchor_bottom = 0.71
offset_left = -644.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 15
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Gallery/BoxContainerA" index="0"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="Gallery/BoxContainerA" index="1"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="Gallery/BoxContainerA" index="2"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="Gallery/BoxContainerA" index="3"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="Gallery/BoxContainerA" index="4"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect6" type="TextureRect" parent="Gallery/BoxContainerA" index="5"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect7" type="TextureRect" parent="Gallery/BoxContainerA" index="6"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect8" type="TextureRect" parent="Gallery/BoxContainerA" index="7"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect9" type="TextureRect" parent="Gallery/BoxContainerA" index="8"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect10" type="TextureRect" parent="Gallery/BoxContainerA" index="9"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="BoxContainerB" type="BoxContainer" parent="Gallery" index="1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.686
anchor_top = 0.12
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_right = 25.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_constants/separation = 15

[node name="TextureRect13" type="TextureRect" parent="Gallery/BoxContainerB" index="0"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect14" type="TextureRect" parent="Gallery/BoxContainerB" index="1"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect15" type="TextureRect" parent="Gallery/BoxContainerB" index="2"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect16" type="TextureRect" parent="Gallery/BoxContainerB" index="3"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect17" type="TextureRect" parent="Gallery/BoxContainerB" index="4"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect18" type="TextureRect" parent="Gallery/BoxContainerB" index="5"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect19" type="TextureRect" parent="Gallery/BoxContainerB" index="6"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect20" type="TextureRect" parent="Gallery/BoxContainerB" index="7"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect21" type="TextureRect" parent="Gallery/BoxContainerB" index="8"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect22" type="TextureRect" parent="Gallery/BoxContainerB" index="9"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect23" type="TextureRect" parent="Gallery/BoxContainerB" index="10"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect24" type="TextureRect" parent="Gallery/BoxContainerB" index="11"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="TextureRect25" type="TextureRect" parent="Gallery/BoxContainerB" index="12"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
texture = SubResource("CanvasTexture_2b3hl")
stretch_mode = 5

[node name="DeleteGallery" type="Button" parent="Gallery" index="2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.905
anchor_top = 0.74
anchor_right = 0.915
anchor_bottom = 0.8
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Delete Gallery"

[node name="Player" parent="." index="2"]
position = Vector2(99, -53)

[node name="ExitArea" type="Area2D" parent="." index="3"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea" index="0"]
position = Vector2(1.5, -61.75)
shape = SubResource("RectangleShape2D_2b3hl")

[connection signal="pressed" from="Gallery/DeleteGallery" to="." method="_on_delete_gallery_pressed"]
[connection signal="body_entered" from="ExitArea" to="." method="_on_exit_area_body_entered"]
